feat/add order and payment enhancements