@@ -11,7 +11,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -34,7 +33,7 @@ public class FavouriteService {
         User user = requireCurrentUser();
         return favouriteItemRepository.findByUser(user).stream()
                 .map(FavouriteItemDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<FavouriteItem> addToFavourites(Long productId) {
